# NutriSmart-AI

./: README.md  main.py  pyproject.toml  requirements.txt
backend/: app.py
backend/database/: models.py
backend/routes/: bmi.py  meals.py  stripe.py  webhook.py
backend/utils/: init_db.py
